<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="about_company">"
Copyright © 2006-2016, ViPER ACOUSTIC. All rights reserved. 
Without the official permission, commercial use is disallowed."</string>
    <string name="about_exit">Exit</string>
    <string name="about_forum">Official forum: forum.vipersaudio.com</string>
    <string name="about_version">Version %1$s (FX), Codename Beautiful</string>
    <string name="app_name">ViPER4Android FX</string>
    <string name="bluetooth_title">Bluetooth Device</string>
    <string name="dsp_settings_bluetooth">Effect Settings - Bluetooth Device</string>
    <string name="dsp_settings_headset">Effect Settings - Headset</string>
    <string name="dsp_settings_speaker">Effect Settings - Phone Speaker</string>
    <string name="dsp_settings_usb">Effect Settings - USB Device</string>
    <string name="eq_preset_acoustic">Acoustic</string>
    <string name="eq_preset_bass_booster">Bass Booster</string>
    <string name="eq_preset_bass_reducer">Bass Reducer</string>
    <string name="eq_preset_classical">Classical</string>
    <string name="eq_preset_custom">Custom</string>
    <string name="eq_preset_deep">Deep</string>
    <string name="eq_preset_flat">Flat</string>
    <string name="eq_preset_r_and_b">R&amp;B</string>
    <string name="eq_preset_rock">Rock</string>
    <string name="eq_preset_small_speakers">Small Speakers</string>
    <string name="eq_preset_treble_booster">Treble Booster</string>
    <string name="eq_preset_treble_reducer">Treble Reducer</string>
    <string name="eq_preset_vocal_booster">Vocal Booster</string>
    <string name="headset_title">Headset</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="pref_strength_title">Select strength</string>
    <string name="pref_analogx_title">AnalogX</string>
    <string name="pref_colorfulmusic_title">Field surround</string>
    <string name="pref_convolver_crosschannel_title">Select cross channel</string>
    <string name="pref_convolver_knl">Impulse response</string>
    <string name="pref_convolver_knl_title">Select impulse response</string>
    <string name="pref_convolver_title">Convolver</string>
    <string name="pref_curesystem_title">Auditory system protection</string>
    <string name="pref_diffsurr_title">Differential Surround</string>
    <string name="pref_dynamicsystem_bass">Select dynamic bass</string>
    <string name="pref_dynamicsystem_output">Listening device</string>
    <string name="pref_dynamicsystem_output_title">Select listening device</string>
    <string name="pref_dynamicsystem_title">Dynamic system</string>
    <string name="pref_dynamicsystem_tube_title">Tube sound simulator (6N1J)</string>
    <string name="pref_equalizer_preset_title">Select preset</string>
    <string name="pref_equalizer_title">FIREqualizer</string>
    <string name="pref_fetcompressor_adapt">Adapt</string>
    <string name="pref_fetcompressor_attack">Attack</string>
    <string name="pref_fetcompressor_autoattack">Auto attack</string>
    <string name="pref_fetcompressor_autogain">Automatic gain</string>
    <string name="pref_fetcompressor_autoknee">Auto knee</string>
    <string name="pref_fetcompressor_autorelease">Auto release</string>
    <string name="pref_fetcompressor_crest">Crest</string>
    <string name="pref_fetcompressor_gain">Gain</string>
    <string name="pref_fetcompressor_knee">inflection</string>
    <string name="pref_fetcompressor_kneemulti">inflection point gain</string>
    <string name="pref_fetcompressor_maxattack">Maximum attack</string>
    <string name="pref_fetcompressor_maxrelease">Maximum release</string>
    <string name="pref_fetcompressor_noclipenable">Prevent clipping</string>
    <string name="pref_fetcompressor_ratio">Compression ratio</string>
    <string name="pref_fetcompressor_release">Release</string>
    <string name="pref_fetcompressor_threshold">Work threshold</string>
    <string name="pref_fetcompressor_title">FET compressor</string>
    <string name="pref_fidelity_vb_bassfreq_title">Select bass frequency</string>
    <string name="pref_fidelity_vb_bassgain_title">Select bass boost</string>
    <string name="pref_fidelity_vb_mode_title">Select bass mode</string>
    <string name="pref_fidelity_vb_title">ViPER bass</string>
    <string name="pref_fidelity_vc_bassgain_title">Select clarity</string>
    <string name="pref_fidelity_vc_mode_title">Select clarity mode</string>
    <string name="pref_fidelity_vc_title">ViPER clarity</string>
    <string name="pref_fx_limiter_threshold">Limit threshold</string>
    <string name="pref_fx_limiter_title">Master gate</string>
    <string name="pref_fx_master_title">Master power</string>
    <string name="pref_output_gain">Output gain</string>
    <string name="pref_output_pan">Channel Pan</string>
    <string name="pref_playback_maxgain">Max gain</string>
    <string name="pref_playback_output_threshold">Max output</string>
    <string name="pref_playback_title">Playback gain control</string>
    <string name="pref_reverb_damp">Damping factor</string>
    <string name="pref_reverb_dry">Dry signal</string>
    <string name="pref_reverb_roomsize">Room size</string>
    <string name="pref_reverb_title">Reverberation</string>
    <string name="pref_reverb_wet">Wet signal</string>
    <string name="pref_reverb_width">Sound field</string>
    <string name="pref_select_cure_cf_title">Select binaural level</string>
    <string name="pref_select_diffsurr_ms_title">Select delay time</string>
    <string name="pref_select_vhs_qual_title">Select effect level</string>
    <string name="pref_spk_opt_title">Speaker optimization</string>
    <string name="pref_spkfx_limiter_threshold">Limit threshold</string>
    <string name="pref_spkfx_limiter_title">Master gate</string>
    <string name="pref_spkfx_master_title">Master power</string>
    <string name="pref_vhs_title">Headphone surround +</string>
    <string name="pref_viperddc_device">Listening device</string>
    <string name="pref_viperddc_device_manufacturer">Select manufacturer</string>
    <string name="pref_viperddc_device_model">Select model</string>
    <string name="pref_viperddc_tips">"ViPER-DDC is used for headset correction. Nearly 500 headphones are supported"</string>
    <string name="pref_viperddc_title">ViPER-DDC</string>
    <string name="pref_vse_tips">"Spectrum extension is used to extend lossy compressed spectrum. Recommended to use when playing MP3, AAC and OOG files"</string>
    <string name="pref_vse_title">Spectrum extension</string>
    <string name="pref_xloud_output_amplifer">Output gain</string>
    <string name="pref_xloud_spk_highfreq">High response</string>
    <string name="pref_xloud_spk_lowfreq">Low response</string>
    <string name="pref_xloud_title">eXtra loud</string>
    <string name="speaker_title">Phone speaker</string>
    <string name="text_abnormal">Abnormal</string>
    <string name="text_about_title">About and credits</string>
    <string name="text_bluetooth">Bluetooth</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_changelog">Changelog</string>
    <string name="text_checkupdate">Check update</string>
    <string name="text_close">Off</string>
    <string name="text_close_developer">Turn off developer mode</string>
    <string name="text_close_selinux">Disable SELinux</string>
    <string name="text_close_selinux_msg">SELinux will be disabled untill you reboot your device. Try this only if other attempts on enabling the driver have failed</string>
    <string name="text_commode">FX compatible mode</string>
    <string name="text_db">dB</string>
    <string name="text_default_storage">Set default storage</string>
    <string name="text_disabled">Disabled</string>
    <string name="text_down_ready">Ready for download</string>
    <string name="text_down_state">%s downloaded</string>
    <string name="text_drv_blank" />
    <string name="text_drv_status">Driver status</string>
    <string name="text_drv_status_view">"Driver version: %1$s
NEON Enabled: %2$s 
Enabled: %3$s 
Status: %4$s 
Audio Format: %5$s 
Processing: %6$s 
Sampling Rate: %7$d"</string>
    <string name="text_drvinst_acquireroot">"Installation failed because of lacking root permission"</string>
    <string name="text_drvinst_busybox_not_installed">Installion failed because there was no busybox installation found</string>
    <string name="text_drvinst_cfg_unsup">Installion failed because the ROM is not supported</string>
    <string name="text_drvinst_dataioerr">Installion failed because of an I/O error. Try rebooting your device and try again</string>
    <string name="text_drvinst_failed">"Installion failed because busybox is not functioning properly. Try using Stericson's busybox or check if root access is available"</string>
    <string name="text_drvinst_ok">Driver installed. Reboot your device to make use of the effects</string>
    <string name="text_drvinst_sdnotmounted">Installion failed because the external storage is not mounted</string>
    <string name="text_drvuninst_confim">Confirm to uninstall the driver</string>
    <string name="text_drvuninst_ok">Driver uninstalled</string>
    <string name="text_drvvernotmatch">"The driver needs to be reinstalled. Do you want to do this now?"</string>
    <string name="text_enter_developer">Enter developer mode</string>
    <string name="text_enter_developer_msg">"Entering developer mode enables operations that may harm your operating system. Continue on your on risk"</string>
    <string name="text_headset">Headset</string>
    <string name="text_loadfxprofile">Load effect profile</string>
    <string name="text_savefxprofile">Save Effect Profile</string>
    <string name="text_setting">Settings</string>
</resources>