<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:id="@id/id_tv_reverb_roomsize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_alignParentStart="true"
                android:gravity="center"
                android:text="@string/pref_reverb_roomsize" />

            <EditText
                android:id="@id/id_tv_reverb_roomsize_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/id_tv_reverb_roomsize"
                android:layout_alignParentEnd="true"
                android:focusable="false"
                android:inputType="none" />

            <SeekBar
                android:id="@id/id_sb_reverb_roomsize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="16dp"
                android:focusable="true"
                android:max="100" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/blacktransparent" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:id="@id/id_tv_reverb_width"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_alignParentStart="true"
                android:gravity="center"
                android:text="@string/pref_reverb_width" />

            <EditText
                android:id="@id/id_tv_reverb_width_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/id_tv_reverb_width"
                android:layout_alignParentEnd="true"
                android:focusable="false"
                android:inputType="none" />

            <SeekBar
                android:id="@id/id_sb_reverb_width"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="16dp"
                android:focusable="true"
                android:max="100" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/blacktransparent" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:id="@id/id_tv_reverb_damp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_alignParentStart="true"
                android:gravity="center"
                android:text="@string/pref_reverb_damp" />

            <EditText
                android:id="@id/id_tv_reverb_damp_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/id_tv_reverb_damp"
                android:layout_alignParentEnd="true"
                android:focusable="false"
                android:inputType="none" />

            <SeekBar
                android:id="@id/id_sb_reverb_damp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="16dp"
                android:focusable="true"
                android:max="100" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/blacktransparent" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:id="@id/id_tv_reverb_wet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/pref_reverb_wet" />

            <EditText
                android:id="@id/id_tv_reverb_wet_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/id_tv_reverb_wet"
                android:layout_alignParentEnd="true"
                android:focusable="false"
                android:inputType="none" />

            <SeekBar
                android:id="@id/id_sb_reverb_wet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="16dp"
                android:focusable="true"
                android:max="100" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/blacktransparent" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:id="@id/id_tv_reverb_dry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/pref_reverb_dry" />

            <EditText
                android:id="@id/id_tv_reverb_dry_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/id_tv_reverb_dry"
                android:layout_alignParentEnd="true"
                android:focusable="false"
                android:inputType="none" />

            <SeekBar
                android:id="@id/id_sb_reverb_dry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="16dp"
                android:focusable="true"
                android:max="100" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/blacktransparent" />
    </LinearLayout>
</ScrollView>