<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?listPreferredItemHeightSmall"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@id/v4a_tv_playback_effect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pref_strength_title" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@id/v4a_iv_knob_bg_3point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:src="@drawable/knob_bg_3point" />

            <ImageView
                android:id="@id/v4a_iv_knob_point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:scaleType="matrix"
                android:src="@drawable/knob_point" />

            <com.pittvandewitt.viperfx.widget.TouchRotateButton
                android:id="@id/v4a_trb_playback_effect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp" />

            <TextView
                android:id="@id/v4a_tv_playback_effect_moderate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@id/v4a_tv_playback_effect_slight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="47dp"
                android:layout_marginTop="20dp"
                android:layout_toStartOf="@id/v4a_tv_playback_effect_moderate" />

            <TextView
                android:id="@id/v4a_tv_playback_effect_extreme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="47dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@id/v4a_tv_playback_effect_moderate" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/blacktransparent" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp">

            <TextView
                android:id="@id/v4a_tv_playback_maxgain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="16dp"
                android:text="@string/pref_playback_maxgain" />

            <EditText
                android:id="@id/v4a_tv_playback_maxgain_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/v4a_tv_playback_maxgain"
                android:layout_alignParentEnd="true"
                android:focusable="false"
                android:inputType="none" />

            <SeekBar
                android:id="@id/v4a_sb_playback_maxgain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:focusable="true"
                android:max="100" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/blacktransparent" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp">

            <TextView
                android:id="@id/v4a_tv_playback_output_threshold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/pref_playback_output_threshold" />

            <EditText
                android:id="@id/v4a_tv_playback_output_threshold_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/v4a_tv_playback_output_threshold"
                android:layout_alignParentEnd="true"
                android:focusable="false"
                android:inputType="textNoSuggestions" />

            <SeekBar
                android:id="@id/v4a_sb_playback_output_threshold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:focusable="true"
                android:max="50" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/blacktransparent" />
    </LinearLayout>
</ScrollView>
